Fix public navibar spacing.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1899,7 +1899,7 @@ input {
 ul.list-of-subalbums {
   font: 14px 'ProximaNova-Regular';
   position: relative;
-  top: 2px;
+  top: 9px;
 
   li {
     display: inline-block;
